知识点总结

--- a/doc/android/qa/常见问题.md
+++ b/doc/android/qa/常见问题.md
@@ -19,3 +19,46 @@
 1. PMS 是由SystemServiceManager 启动的；
 2. 负责系统中Package的管理，应用程序的安装、卸载、信息查询都是该类实现；
 3. 会解析Manifest.xml 文件，保存数据；
+
+## Q: NDK c++ crash 如何排查？
+1. 可以使用 ndk-stack  addr2line 工具
+```aidl
+// ndk-stack 
+adb logcat | /run/media/lvjie/DATA/lvjie/android/ndk/21.1.6352462/ndk-stack -sym /home/lvjie/build/intermediates/cmake/debug/obj/arm64-v8a
+或者
+adb shell logcat > 1.log  
+dk-stack -sym $PROJECT_PATH/obj/local/armeabi –dump 1.log  
+
+// addr2line
+ndk/21.4.7075529/toolchains/aarch64-linux-android-4.9/prebuilt/linux-x86_64/bin/aarch64-linux-android-addr2line -C -f -e obj/arm64-v8a/lib.so 0x2bc8754
+或者
+arm-linux-androideabi-addr2line –e obj/local/armeabi/libhello-jni.so 00004de8 000056c8 00004fb4 00004f58  
+```
+android studio 编译so库， 通常会编译两个so库，一个无符号，一个有符号， 无符号会打包到apk里面， 有符号的位于：build/intermediates/cmake/debug/obj/ 目录
+
+## Q: android 系统启动大概流程
+bootloader-->kernel-->init-->zygote-->system server-->app
+1. init 进程
+   1）init 进程是linux 系统用户空间的第一个进程
+   2）创建和挂载启动的目录文件
+   3）启动zygote进程
+
+2. zygote 进程
+   1）Zgyote是Android中的第一个art虚拟机,他通过socket的方式与其他进程进行通信。这里的“其他进程”其实主要是系统进程——SystemServer
+   2）Zygote是一个C/S模型,Zygote进程作为服务端,它主要负责创建Java虚拟机,加载系统资源,启
+   动SystemServer进程,以及在后续运行过程中启动普通的应用程序,其他进程作为客户端向它发
+   出“孵化”请求,而Zygote接收到这个请求后就“孵化”出一个新的进程。比如,当点击Launcher里
+   的 应用程序图标去启动一个新的应用程序进程时,这个请求会到达框架层的核心服务
+   ActivityManagerService中,当AMS收到这个请求后,它通过调用Process类发出一个“孵化”子进
+   程的Socket请求,而Zygote监听到这个请求后就立刻fork一个新的进程出来
+   3）
+   
+## Q: jni 开发的注意事项
+   1）方法签名保证正确；
+   2）方法有callback 回调的，需要构造成NewGlobalRef， 用完，需要释放；
+   3）jni层使用的变量， 最好也通过DeleteLocalRef 清楚掉；
+
+   c++ 智能指针
+   原理： 内部计数器方式实现，引用计数就存在互相引用的问题；
+   1）不要用一个原始指针初始化多个shared_ptr;
+   2) 避免循环引用，解决办法可以通过弱引用来解决；
