知识点总结

--- a/doc/android/qa/常见问题.md
+++ b/doc/android/qa/常见问题.md
@@ -53,6 +53,9 @@ bootloader-->kernel-->init-->zygote-->system server-->app
    程的Socket请求,而Zygote监听到这个请求后就立刻fork一个新的进程出来
    3）
    
+3. System Server
+   1) AMS、WMS、PMS 等服务 都是在system_server 进程启动的, 都是线程。
+   
 ## Q: jni 开发的注意事项
    1）方法签名保证正确；
    2）方法有callback 回调的，需要构造成NewGlobalRef， 用完，需要释放；
@@ -62,3 +65,10 @@ bootloader-->kernel-->init-->zygote-->system server-->app
    原理： 内部计数器方式实现，引用计数就存在互相引用的问题；
    1）不要用一个原始指针初始化多个shared_ptr;
    2) 避免循环引用，解决办法可以通过弱引用来解决；
+
+## Q: WMS相关
+1. Window和Activity以及WindowManager什么时候建立的关系？
+   
+2. Window什么时候和View进行关联？
+3. Window有哪些属性？类型？层级关系？z-order？Window标志？软键盘模式都了解么？
+4. View是如何一步一步添加到屏幕上的？更新？删除呢？
