--- a/doc/android/qa/常见问题.md
+++ b/doc/android/qa/常见问题.md
@@ -56,6 +56,9 @@ bootloader-->kernel-->init-->zygote-->system server-->app
 3. System Server
    1) AMS、WMS、PMS 等服务 都是在system_server 进程启动的, 都是线程。
    
+## Q：Zygote和SystemService之间采用的是socket而不是binder?
+   1) 多线程程序里不准使用fork
+   
 ## Q: jni 开发的注意事项
    1）方法签名保证正确；
    2）方法有callback 回调的，需要构造成NewGlobalRef， 用完，需要释放；
@@ -72,3 +75,8 @@ bootloader-->kernel-->init-->zygote-->system server-->app
 2. Window什么时候和View进行关联？
 3. Window有哪些属性？类型？层级关系？z-order？Window标志？软键盘模式都了解么？
 4. View是如何一步一步添加到屏幕上的？更新？删除呢？
+
+## Q: PMS相关
+1. 管理所有的包信息，包括应用安装、卸载、更新以及解析 AndroidManifest.xml;
+2. 当手机开机的时候，系统启动 PMS 后会去扫描两个目录，分别是存放用户安装的 apk 的目录 /data/app 以及系统安装的 apk 的目录 /system/app;
+3. 
