启动优化文档

--- a/doc/android/性能优化/启动优化理论篇.md
+++ b/doc/android/性能优化/启动优化理论篇.md
@@ -1,2 +1,70 @@
 ## 启动优化
 
+### APP 启动优化 时间统计
+1. 如何统计app启动耗时？
+方法1：传统的性能监控指标，通常是以Application的attachBaseContext回调作为起点，首页decorView.postDraw任务执行作为结束时间点，统计这段时间的耗时。
+
+方法2：查看系统日志
+ActivityTaskManager: Displayed com.android.study.example/.MainActivity: +1s237ms
+
+方法3：屏幕录制为视频，视频逐帧分析
+
+方法4：执行adb
+adb shell am start -W com.example.app/.MainActivity
+
+Starting: Intent { cmp=com.example.app/.MainActivity }
+Status: ok
+Activity: com.example.app/.MainActivity
+ThisTime: 2567
+TotalTime: 2567
+WaitTime: 2567
+Complete
+ThisTime表示本次启动耗时，TotalTime表示从首次创建以来的总耗时，WaitTime表示等待主线程响应的时间。
+
+
+### APP 耗时分析
+1. APP 耗时如何进行分析？
+
+方法1: 使用TraceView
+通过代码注入，生成trace文件，可以查看每个方法的耗时。
+
+
+### 优化方案
+https://mp.weixin.qq.com/s?__biz=MzkxNTE3ODU0NA==&mid=2247493918&idx=1&sn=3c945aaf656a2cdbca9426c98b3d471e&chksm=c161bc41f6163557643a7ad0e570f458a82c75ba7df1cdf01989768da47f6dba87f41f21143e&scene=178&cur_album_id=2345714388667727873#rd
+
+#### 方法1： 耗时操作放子线程中执行
+
+#### 方法2：提频cpu
+只有高通cpu具备这个能力，通过反射实现 反射BoostFramework该类。
+
+#### 方法3：让线程尽量在一个cpu上调度(cpu亲和性)
+由于CPU存在缓存机制，让同一个线程被重新调度时，尽量调度到同一个处理器上，这样就可以可以避免不必要的 Cache Miss。
+另一种情况，比如对于一组相同的任务，它们需要访问的内存大部分是相同的，如果控制这组任务调度在相同的CPU上，也可以共享相同的cache，从而提高程序的访问效率。
+
+软亲和性: linux系统会尽可能将一个进程保持在指定的CPU上运行，但不严格保证，当所指定的CPU非常繁忙时，它可以迁移到其他空闲CPU上执行
+硬亲和性：linux系统允许指定某个进程运行在特定的一个或一组CPU上，并且只能运行在这些特定的CPU上。
+
+如何实现硬亲和性？
+c层 Linux提供了api， 将c层接口桥接到java层调用实现；
+
+#### 方法4：提升线程优先级
+（1）android.os.Process.setThreadPriority （int priority）
+　　或
+　　android.os.Process.setThreadPriority （int tid， int priority）
+　　priority：【-20， 19】，高优先级 -> 低优先级.
+这个是基于Linux的优先级。
+
+（2）java.lang.Thread.setPriority （int priority）
+　　priority：【1， 10】，低优先级 -> 高优先级.
+这个是Java程序中对Thread的修改。
+
+测试后发现，第1种方法设置的优先级，对线程调度影响显著.
+
+如何验证优先级确实有效？
+首先创建一组工作线程，执行相同的时间， 看哪个线程先执行完。
+
+
+
+
+
+
