--- a/doc/android/性能优化/卡顿监控篇.md
+++ b/doc/android/性能优化/卡顿监控篇.md
@@ -1,26 +1,30 @@
-## Choreographer 监控
-https://blog.csdn.net/maniuT/article/details/131416948
-
-想要监控卡顿或者是监测App的流畅度，就必须通过代码手段来获取FPS或者每帧耗时，并转化成可以衡量应用卡顿程度的指标。而几乎所有的卡顿监控方案都离不开Choreographer这个类。
-
-在应用层就是通过Choreographer来接受VSync信号并执行每一帧的渲染逻辑。
-
-### VSYNC
-https://zhuanlan.zhihu.com/p/455886476
-
-在Android 4.1开始，Project Butter被推出，其主要的目的就是解决Android UI流畅性差的问题，Project Butter对Android Display系统进行了重构，引入三个核心元素：VSYNC、Triple Buffer和Choreographer。
-
-系统每16ms会发送一次VSYNC信号，每收到 VSYNC 中断，CPU 会立即准备 Buffer 数据，
-
 ## 卡顿
+https://cloud.tencent.com/developer/article/1156121
+
+### 方案一：adb shell dumpsys SurfaceFlinger  /  adb shell dumpsys gfxinfo
+使用‘adb shell dumpsys SurfaceFlinger’命令即可获取最近127帧的数据，通过定期执行adb命令，获取帧数来计算出帧率FPS。
+一般开发过程或测试过程使用。
+
+### 方案二 利用UI线程的Looper打印的日志匹配
+Android主线程更新UI。如果界面1秒钟刷新少于60次，即FPS小于60，用户就会产生卡顿感觉。
+Android使用消息机制进行UI更新，UI线程有个Looper，在其loop方法中会不断取出message，调用其绑定的Handler在UI线程执行。如果在handler的dispatchMesaage方法里有耗时操作，就会发生卡顿。
+
+### 方案三 使用Choreographer.FrameCallback
+https://blog.csdn.net/maniuT/article/details/131416948
+我们知道， Android系统每隔16ms发出VSYNC信号，来通知界面进行重绘、渲染，每一次同步的周期为16.6ms，代表一帧的刷新频率。
+理论上来说两次回调的时间周期应该在16ms，如果超过了16ms我们则认为发生了卡顿，利用两次回调间的时间周期来判断是否发生卡顿
+
+这个方案的原理主要是通过Choreographer类设置它的FrameCallback函数，当每一帧被渲染时会触发回调FrameCallback， FrameCallback回调void doFrame (long frameTimeNanos)函数。
+一次界面渲染会回调doFrame方法，如果两次doFrame之间的间隔大于16.6ms说明发生了卡顿。
+
+
+
 
 ### 卡顿原因
 绘制任务太重，绘制一帧内容耗时太长。
 主线程太忙了，导致VSync信号来时还没有准备好数据导致丢帧。
 
 ### 卡顿监控
-方案1：WatchDog，往主线程发消息，然后延迟看该消息是否被处理，从而得出主线程是否卡顿的依据。
-方案不优雅
 
 方案2：利用loop循环时的消息分发前后的日志打印（matrix使用了这个）
 替换主线程Looper的Printer，监控dispatchMessage的执行时间（大部分主线程的操作最终都会执行到这个dispatchMessage中）。
